--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
+    <script>
+      // Minimal global error banner to reveal mobile-only runtime issues before React mounts
+      (function () {
+        function showBanner(message) {
+          try {
+            var banner = document.createElement('div');
+            banner.style.position = 'fixed';
+            banner.style.top = '0';
+            banner.style.left = '0';
+            banner.style.right = '0';
+            banner.style.zIndex = '99999';
+            banner.style.background = '#991b1b';
+            banner.style.color = 'white';
+            banner.style.fontFamily = 'system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif';
+            banner.style.fontSize = '12px';
+            banner.style.padding = '8px 12px';
+            banner.style.boxShadow = '0 2px 6px rgba(0,0,0,0.2)';
+            banner.textContent = 'App error: ' + message;
+            document.body.appendChild(banner);
+          } catch (e) { /* ignore */ }
+        }
+        window.addEventListener('error', function (e) {
+          if (e && e.message) showBanner(e.message);
+        });
+        window.addEventListener('unhandledrejection', function (e) {
+          var msg = (e && e.reason && (e.reason.message || e.reason.toString())) || 'Unhandled promise rejection';
+          showBanner(msg);
+        });
+      })();
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
