--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           if (typeof window !== 'undefined') {
             window.startDeviceMonitoring = window.startDeviceMonitoring || function(){ /* no-op */ };
             window.stopDeviceMonitoring = window.stopDeviceMonitoring || function(){ /* no-op */ };
+            try { localStorage.removeItem('device_registration_skipped'); } catch (_) {}
           }
         } catch(_) {}
       })();
